MellowMint App design

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,20 @@
 <header>
     <div class="header-content">
-        <div class="header-content-inner">
-            <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+        <div class="header-content-inner text-center">
+<!--            <img src="img/header.jpg" alt="Mellowmint Logo" class="header-logo">-->
+            <h1>Apps that soothe, organize, and spark joy.</h1>
             <hr>
-            <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <div style="margin: 20px 0;">
+                <a href="/#portfolio" class="btn btn-primary btn-xl">Featured Apps</a>
+            </div>
+            <div>
+                <a href="https://apps.apple.com/" class="btn btn-default" style="margin-right:10px;">
+                    <i class="fa fa-apple"></i> App Store
+                </a>
+                <a href="https://play.google.com/store" class="btn btn-default">
+                    <i class="fa fa-android"></i> Google Play
+                </a>
+            </div>
         </div>
     </div>
 </header>
