--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,96 +1,80 @@
 <section class="no-padding" id="portfolio">
+  <div class="container-fluid">
+    <div class="row">
+      <!-- Memory by Seasons -->
+      <div class="col-md-6 col-sm-12">
+        <div class="portfolio-box">
+          <img src="img/portfolio/memory-by-seasons/Simulator Screenshot - iPhone 16 Plus - 2025-10-11 at 20.32.31.png" class="img-responsive" alt="Memory by Seasons screenshot">
+          <div class="card-body text-center" style="padding: 24px;">
+            <span class="badge portfolio-badge">Journaling App</span>
+            <h3 style="margin-top:16px; font-family:'Fredoka',sans-serif; color:#222;">Memory by Seasons</h3>
+            <p style="margin-top:10px; color:#555; font-size:1.1em;">A journaling app that helps you capture memories and reflect on your life, season by season.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Closet Flow -->
+      <div class="col-md-6 col-sm-12">
+        <div class="portfolio-box">
+          <img src="img/portfolio/closet-flow/dashboard.png" class="img-responsive" alt="Closet Flow screenshot">
+          <div class="card-body text-center" style="padding: 24px;">
+            <span class="badge portfolio-badge">Wardrobe Organizer</span>
+            <h3 style="margin-top:16px; font-family:'Fredoka',sans-serif; color:#222;">Closet Flow</h3>
+            <p style="margin-top:10px; color:#555; font-size:1.1em;">Organize your wardrobe, plan outfits, and simplify your mornings with Closet Flow.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<br/>
+<section class="no-padding" id="apps">
     <div class="container-fluid">
         <div class="row no-gutter">
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+            <div class="col-lg-6 col-sm-6">
+                <div class="portfolio-box">
+                    <img src="img/portfolio/memory-by-seasons/Simulator Screenshot - iPhone 16 Plus - 2025-10-11 at 20.34.23.png" class="img-responsive" alt="Memory by Seasons screenshot">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Featured App
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Memory by Seasons
                             </div>
+                            <p style="color:#fff;">A journaling app that helps you capture memories and reflect on your life, season by season.</p>
+                            <a href="https://apps.apple.com/" class="btn btn-default btn-xs" style="margin-right:5px;">
+                                <i class="fa fa-apple"></i> App Store
+                            </a>
+                            <a href="https://play.google.com/store" class="btn btn-default btn-xs">
+                                <i class="fa fa-android"></i> Google Play
+                            </a>
                         </div>
                     </div>
-                </a>
+                </div>
             </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+            <div class="col-lg-6 col-sm-6">
+                <div class="portfolio-box">
+                    <img src="img/portfolio/closet-flow/closet_brands.png" class="img-responsive" alt="Closet Flow screenshot">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                Featured App
                             </div>
                             <div class="project-name">
-                                Project Name
+                                Closet Flow
                             </div>
+                            <p style="color:#fff;">Organize your wardrobe, plan outfits, and simplify your mornings with Closet Flow.</p>
+                            <a href="https://apps.apple.com/" class="btn btn-default btn-xs" style="margin-right:5px;">
+                                <i class="fa fa-apple"></i> App Store
+                            </a>
+                            <a href="https://play.google.com/store" class="btn btn-default btn-xs">
+                                <i class="fa fa-android"></i> Google Play
+                            </a>
                         </div>
                     </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
-                        </div>
-                    </div>
-                </a>
+                </div>
             </div>
         </div>
     </div>
 </section>
+<br/>
