--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -6,10 +6,16 @@
 <body id="page-top">
   {% include nav.html %}
   {% include header.html %}
-  {% include call-to-action.html %}
-  {% include services.html %}
-  {% include portfolio.html %}
-  {% include aside.html %}
+  {% if page.url == "/" or page.url == "/index.html" %}
+    {% include call-to-action.html %}
+    {% include services.html %}
+    {% include portfolio.html %}
+    {% include aside.html %}
+  {% else %}
+    <main>
+      {{ content }}
+    </main>
+  {% endif %}
   {% include contact.html %}
   {% include scripts.html %}
 </body>
