--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -23,6 +23,17 @@
           </div>
         </div>
       </div>
+      <!-- Fun with Crosswords -->
+      <div class="col-md-6 col-sm-12">
+        <div class="portfolio-box">
+          <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.38.30.png" class="img-responsive" alt="Fun with Crosswords screenshot">
+          <div class="card-body text-center" style="padding: 24px;">
+            <span class="badge portfolio-badge">Puzzle Game</span>
+            <h3 style="margin-top:16px; font-family:'Fredoka',sans-serif; color:#222;">Fun with Crosswords</h3>
+            <p style="margin-top:10px; color:#555; font-size:1.1em;">Challenge your mind with engaging crossword puzzles for all skill levels.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -42,7 +53,7 @@
                                 Memory by Seasons
                             </div>
                             <p style="color:#fff;">A memory board game where you flip tiles to match the correct ones, season by season.</p>
-                            <a href="https://apps.apple.com/" class="btn btn-default btn-xs" style="margin-right:5px;">
+                            <a href="https://apps.apple.com/us/app/memory-by-seasons/id6753765713" class="btn btn-default btn-xs" style="margin-right:5px;">
                                 <i class="fa fa-apple"></i> App Store
                             </a>
                             <a href="https://play.google.com/store" class="btn btn-default btn-xs">
@@ -69,6 +80,25 @@
                             </a>
                             <a href="https://play.google.com/store" class="btn btn-default btn-xs">
                                 <i class="fa fa-android"></i> Google Play
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-sm-6">
+                <div class="portfolio-box">
+                    <img src="img/portfolio/fun-with-crosswords/Simulator Screenshot - iPhone Air - 2025-11-16 at 23.38.41.png" class="img-responsive" alt="Fun with Crosswords screenshot">
+                    <div class="portfolio-box-caption">
+                        <div class="portfolio-box-caption-content">
+                            <div class="project-category text-faded">
+                                Featured App
+                            </div>
+                            <div class="project-name">
+                                Fun with Crosswords
+                            </div>
+                            <p style="color:#fff;">Challenge your mind with engaging crossword puzzles for all skill levels.</p>
+                            <a href="https://apps.apple.com/us/app/fun-with-crosswords/id1393761969" class="btn btn-default btn-xs" style="margin-right:5px;">
+                                <i class="fa fa-apple"></i> App Store
                             </a>
                         </div>
                     </div>
