--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -9,5 +9,18 @@
 <script src="js/jquery.fittext.js"></script>
 <script src="js/wow.min.js"></script>
 
+<!-- AOS - Animate on Scroll -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 <!-- Custom Theme JavaScript -->
 <script src="js/creative.js"></script>
+
+<!-- Initialize AOS -->
+<script>
+  AOS.init({
+    once: true,
+    duration: 600,
+    offset: 100
+  });
+</script>
+
