--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,18 +9,25 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-6 text-center">
+            <div class="col-lg-4 col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-leaf wow bounceIn text-primary"></i>
                     <h3>Memory by Seasons</h3>
                     <p class="text-muted">Relax your mind, one season at a time.<br>A gentle memory game for peaceful moments.<br>Match, breathe, and unwind.</p>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 text-center">
+            <div class="col-lg-4 col-md-4 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-sun-o wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Closet Flow</h3>
                     <p class="text-muted">Declutter your closet. Clear your mind.<br>Style meets serenity.<br>Organize with ease, dress with joy.</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-4 text-center">
+                <div class="service-box">
+                    <i class="fa fa-4x fa-puzzle-piece wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <h3>Fun with Crosswords</h3>
+                    <p class="text-muted">Challenge your mind with words.<br>Daily puzzles for mental wellness.<br>Solve, learn, and enjoy.</p>
                 </div>
             </div>
         </div>
