--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -43,7 +43,7 @@ p {
 }
 
 .bg-primary {
-    background-color: $theme-primary;
+    background: linear-gradient(135deg, #F05F40 0%, #e8491d 100%);
 }
 
 .bg-dark {
