--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,7 @@
 
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
