--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                 <a href="/#portfolio" class="btn btn-primary btn-xl">Featured Apps</a>
             </div>
             <div>
-                <a href="https://apps.apple.com/" class="btn btn-default" style="margin-right:10px;">
+                <a href="https://apps.apple.com/us/developer/subrina-a-thompson/id1393761968" class="btn btn-default" style="margin-right:10px;">
                     <i class="fa fa-apple"></i> App Store
                 </a>
                 <a href="https://play.google.com/store" class="btn btn-default">
